# AIE8_Certification_Challenge

./: .gitignore  QUICK_START.md  README.md  REPORT.md
backend/: .env.example  ADDING_NEW_STANDARDS.md  ISO_27002_EXPLAINED.md  RAGAS_REPORT.md  README.md  main.py  pyproject.toml
backend/docker/: docker-compose.yml
backend/docker/qdrant_storage/: raft_state.json
backend/docker/qdrant_storage/collections/iso_collections/0/: newest_clocks.json  replica_state.json
backend/docker/qdrant_storage/collections/iso_collections/0/segments/29d20af8-1ff1-479d-84ad-c0887b8b5cb5/: mutable_id_tracker.mappings  mutable_id_tracker.versions
backend/docker/qdrant_storage/collections/iso_collections/0/segments/29d20af8-1ff1-479d-84ad-c0887b8b5cb5/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/docker/qdrant_storage/collections/iso_collections/0/segments/6e6a3abc-fe6d-42a3-b3b7-9ee368481200/: mutable_id_tracker.mappings  mutable_id_tracker.versions
backend/docker/qdrant_storage/collections/iso_collections/0/segments/6e6a3abc-fe6d-42a3-b3b7-9ee368481200/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/docker/qdrant_storage/collections/iso_collections/0/segments/7bb92585-0adc-44e0-b6d7-a6e74e2087a5/: mutable_id_tracker.mappings  mutable_id_tracker.versions
backend/docker/qdrant_storage/collections/iso_collections/0/segments/7bb92585-0adc-44e0-b6d7-a6e74e2087a5/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/docker/qdrant_storage/collections/iso_collections/0/segments/fc4df989-875e-4a54-8ea7-4eeb04e8588a/: mutable_id_tracker.mappings  mutable_id_tracker.versions
backend/docker/qdrant_storage/collections/iso_collections/0/segments/fc4df989-875e-4a54-8ea7-4eeb04e8588a/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/ragas/: 01_generate_synthetic_data.ipynb  02_evaluations.ipynb  README.md  evaluation_utils.py
backend/standards/: __init__.py  iso_27001_controls.py  iso_31000_controls.py
backend/utils/: advanced_retrieval.py  agents.py  document_processor.py  prompts.py  rag.py  settings.py  standards.py  tools.py  vector_store.py
frontend/: README.md  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  Assessment.jsx  Dashboard.jsx  ImplementationHelper.jsx  (+2 more)
